kubernetes/fluxcd/apps/base/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
    - match: Host(`jellyfin.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: certificate-secret
